--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <title>Zigen</title>
 </head>
 <body>
-   <div class="container">  
-        <h1 class="">Teste</h1>
-   </div>
-</body>
-</html>
+    <div class="flex gap-1">
+        <a href="#" class="btn btn-sm">Label</a>
+        <a href="#" class="btn btn-md">Label</a>
+        <button href="#" class="btn btn-lg">Label</button>
+    </div>
+
+    <div class="flex gap-1">
+        <a aria-label="Label" href="#" class="btn btn-sm"></a>
+        <span aria-label="Label" href="#" class="btn btn-md"></span>
+        <button aria-label="Label" href="#" class="btn btn-lg"></button>
+    </div>
+    </body>
+    </html>
