--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
     <title>Zigen</title>
 </head>
 <body>
-    <div class="flex gap-1">
-        <a href="#" class="social" aria-label="tiktok"></a>
-        <a href="#" class="social" aria-label="twitter"></a>
-        <a href="#" class="social" aria-label="instagram"></a>
-        <a href="#" class="social" aria-label="discord"></a>
-    </div>
+    <header>
+        <div class="container py-base">
+            <nav class="flex items-center gap-1.5">
+                <a href="#">
+                    <img src="asssets/logo.svg" alt="logo zingen">
+                </a>
+
+                <a href="#about" class="desktop-only">Conheça o app</a>
+                <a href="#feature" class="desktop-only">Funcionalidade</a>
+                <a href="#pricing" class="desktop-only">Planos e preços</a>
+
+                <a href="#download" class="btn btn-sm">Baixar Agora</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
