--- a/index.html
+++ b/index.html
@@ -168,5 +168,31 @@
             </div>
         </div>
     </section>
+
+    <section id="download">
+        <div class="container py-xl">
+            <div class="card px-lg even-columns items-center">
+                <div>
+                    <header>
+                        <strong>download</strong>
+                        <h2>Bora cantar ?</h2>
+                    </header>
+                    <p>
+                        Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis! 
+                    </p>
+
+                    <div class="buttons flex gap-1">
+                        <a href="#">
+                            <img src="asssets/button-apple-store.svg" alt="Baixar da Apple Store">
+                        </a>
+                        <a href="#">
+                            <img src="asssets/button-play-store.svg" alt="Baixar da Play Store">
+                        </a>
+                    </div>
+                </div>
+                <img src="asssets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
